--- a/src/components/UI/Modal/Modal.module.css
+++ b/src/components/UI/Modal/Modal.module.css
@@ -1,14 +1,20 @@
-.Modal {
+.modal-container {
     position: fixed;
-    z-index: 500;
+    top: 0;
+    left: 0;
+    z-index: 300;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.modal {
     background-color: white;
     width: 70%;
     border: 1px solid #ccc;
     box-shadow: 1px 1px 1px black;
     padding: 16px;
-    left: 15%;
-    top: 15%;
-    box-sizing: border-box;
-    transition: all 0.3s ease-out;
 }
 
