--- a/src/components/UI/Modal/Modal.module.css
+++ b/src/components/UI/Modal/Modal.module.css
@@ -15,6 +15,13 @@
     width: 70%;
     border: 1px solid #ccc;
     box-shadow: 1px 1px 1px black;
-    padding: 16px;
+    /* padding: 1rem; */
+    width: 21rem;
 }
 
+@media (min-width: 23rem) {
+    .modal {
+        width: 95%;
+        max-width: 40rem;
+    }
+}
