--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,20 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat|Roboto&display=swap');
+
 * {
   box-sizing: border-box;
   margin: 0;
+}
+
+body {
+    /* font-family: 'Roboto', sans-serif; */
+    font-family: 'Montserrat', sans-serif;
+}
+
+h1, 
+h2, 
+h3, 
+h4, 
+h5, 
+h6 {
+    font-family: 'Roboto', sans-serif;
 }
