--- a/src/components/Bits/BitInfo/BitInfo.module.css
+++ b/src/components/Bits/BitInfo/BitInfo.module.css
@@ -1,7 +1,3 @@
-.bitinfo {
-
-}
-
 .bitinfo__image {
     width: 100%;
 }
@@ -14,20 +10,13 @@ section {
     margin: 2rem 0;
 }
 
-.bitinfo__bit-description {
-    
-}
-
 .bitinfo__bit-description h3 {
     color: #009688;
     font-variant: all-small-caps;
     letter-spacing: .13rem;
 }
 
-.bitinfo__bit-description p {
-
-}
-
 .bitinfo__badges {
     display: flex;
+    justify-content: space-evenly;
 }
